--- a/Touchstone Brother IpP/Properties/Resources.resx
+++ b/Touchstone Brother IpP/Properties/Resources.resx
@@ -124,4 +124,10 @@
   <data name="Label" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Label.lbx;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="QRIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\QRIcon.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ErrorQR" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ErrorQR.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
